syntax = "proto2";

package simple_msgs;

message Bool {
  required bool value = 1;
}